tests/ui/traits/issue-35869.stderr
error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/issue-35869.rs:11:15
   |
LL |     fn foo(_: fn(u16) -> ()) {}
   |               ^^^^^^^^^^^^^ expected `u8`, found `u16`
   |
note: type in trait
  --> $DIR/issue-35869.rs:2:15
   |
LL |     fn foo(_: fn(u8) -> ());
   |               ^^^^^^^^^^^^
   = note: expected signature `fn(fn(u8))`
              found signature `fn(fn(u16))`
help: change the parameter type to match the trait
   |
LL -     fn foo(_: fn(u16) -> ()) {}
LL +     fn foo(_: fn(u8)) {}
   |

error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/issue-35869.rs:13:15
   |
LL |     fn bar(_: Option<u16>) {}
   |               ^^^^^^^^^^^ expected `u8`, found `u16`
   |
note: type in trait
  --> $DIR/issue-35869.rs:3:15
   |
LL |     fn bar(_: Option<u8>);
   |               ^^^^^^^^^^
   = note: expected signature `fn(Option<u8>)`
              found signature `fn(Option<u16>)`
help: change the parameter type to match the trait
   |
LL -     fn bar(_: Option<u16>) {}
LL +     fn bar(_: Option<u8>) {}
   |

error[E0053]: method `baz` has an incompatible type for trait
  --> $DIR/issue-35869.rs:15:15
   |
LL |     fn baz(_: (u16, u16)) {}
   |               ^^^^^^^^^^ expected `u8`, found `u16`
   |
note: type in trait
  --> $DIR/issue-35869.rs:4:15
   |
LL |     fn baz(_: (u8, u16));
   |               ^^^^^^^^^
   = note: expected signature `fn((u8, _))`
              found signature `fn((u16, _))`
help: change the parameter type to match the trait
   |
LL -     fn baz(_: (u16, u16)) {}
LL +     fn baz(_: (u8, u16)) {}
   |

error[E0053]: method `qux` has an incompatible type for trait
  --> $DIR/issue-35869.rs:17:17
   |
LL |     fn qux() -> u16 { 5u16 }
   |                 ^^^ expected `u8`, found `u16`
   |
note: type in trait
  --> $DIR/issue-35869.rs:5:17
   |
LL |     fn qux() -> u8;
   |                 ^^
   = note: expected signature `fn() -> u8`
              found signature `fn() -> u16`
help: change the output type to match the trait
   |
LL -     fn qux() -> u16 { 5u16 }
LL +     fn qux() -> u8 { 5u16 }
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0053`.
